--- a/MobileShop/MainPage.xaml
+++ b/MobileShop/MainPage.xaml
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:MobileShop" x:Class="MobileShop.MainPage">
-    <StackLayout>
+    <StackLayout VerticalOptions="EndAndExpand">
         <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
+        <Button Text="Перейти в каталог магазина" Clicked="Handle_Clicked"/>
     </StackLayout>
 </ContentPage>
